# bare-runtime

./: .gitignore  CMakeLists.txt  README.md  index.js  install.js  package.json
.github/workflows/: integrate.yml  prebuild.yml  publish.yml
lib/: spawn.js
npm/: .gitignore
npm/android-arm/: package.json
npm/android-arm/lib/: .npmignore
npm/android-arm64/: package.json
npm/android-ia32/: package.json
npm/android-x64/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/ios-arm64/: package.json
npm/ios-arm64-simulator/: index.js  package.json
npm/ios-arm64-simulator/lib/: .npmignore
npm/ios-x64-simulator/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: index.js  package.json
npm/win32-arm64/: index.js  package.json
npm/win32-x64/: package.json
npm/win32-x64/lib/: .npmignore
